fixed visual spacing bug

--- a/src/components/recipeForm/RecipeInfoInput.scss
+++ b/src/components/recipeForm/RecipeInfoInput.scss
@@ -29,7 +29,7 @@
         background-color: $salmon;
     }
 
-    .RecipeInfo-name {
+    .RecipeInfoInput-name {
         input, textArea {
             font-size: 2rem;
             color: $primary;
